fix overflow

--- a/src/modules/components/DataGrid/DataGrid.scss
+++ b/src/modules/components/DataGrid/DataGrid.scss
@@ -86,7 +86,6 @@ $break-large: 1200px;
   padding: 0 10px;
   text-overflow: ellipsis;
   transition: font $animation-timing ease;
-  white-space: nowrap;
 
   .btn {
     margin-right: 3px;
